--- a/HTML/appointments.html
+++ b/HTML/appointments.html
@@ -46,7 +46,7 @@
                     <td>90 PLN</td>
                     <td>29/10/2020 14:00</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="edit-button"><a href="./FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -59,7 +59,7 @@
                     <td>90 PLN</td>
                     <td>29/10/2020 14:00</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="edit-button"><a href="./FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -72,7 +72,7 @@
                     <td>90 PLN</td>
                     <td>29/10/2020 14:00</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="edit-button"><a href="./FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -81,7 +81,7 @@
         <div class="booking">
             <h2>Book new appointment</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quia officiis vitae voluptatum maiores atque dolorum eveniet, quod laboriosam animi, molestiae ullam eaque maxime tempora nobis! Recusandae pariatur eum molestiae.</p>
-            <button class="main-button"><a href="./booking-form.html" target="_blank">Book now!</a></button>
+            <button class="main-button"><a href="FORMS/booking-form.html" target="_blank">Book now!</a></button>
         </div>
     </main>
     <div class="wave-footer">
