--- a/HTML/services.html
+++ b/HTML/services.html
@@ -40,7 +40,8 @@
                     <td>1h</td>
                     <td>90 PLN</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="details-button"><a href="./FORMS/service-details.html">Details</a></button>
+                        <button class="edit-button"><a href="./FORMS/edit-service.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -49,7 +50,8 @@
                     <td>30 min</td>
                     <td>50 PLN</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="details-button"><a href="./FORMS/service-details.html">Details</a></button>
+                        <button class="edit-button"><a href="./FORMS/edit-service.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -58,7 +60,8 @@
                     <td>30 min</td>
                     <td>50 PLN</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="details-button"><a href="./FORMS/service-details.html">Details</a></button>
+                        <button class="edit-button"><a href="./FORMS/edit-service.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -67,12 +70,13 @@
                     <td>1.5h</td>
                     <td>120 PLN</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="details-button"><a href="./FORMS/service-details.html">Details</a></button>
+                        <button class="edit-button"><a href="./FORMS/edit-service.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
             </table>
-            <button><a href="./booking-form.html" target="_blank">Book now!</a></button>
+            <button class="main-button"><a href="FORMS/booking-form.html" target="_blank">Book now!</a></button>
         </div>
     </main>
     <div class="wave-footer">
