--- a/HTML/clients.html
+++ b/HTML/clients.html
@@ -41,7 +41,7 @@
                     <td>jkrol@gmail.com</td>
                     <td>+48 502 939 325</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="edit-button"><a href="FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -51,7 +51,7 @@
                     <td>jkrol@gmail.com</td>
                     <td>+48 502 939 325</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="edit-button"><a href="FORMS/edit-client.htmlt">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
@@ -61,14 +61,19 @@
                     <td>jkrol@gmail.com</td>
                     <td>+48 502 939 325</td>
                     <td>
-                        <button class="edit-button"><a href="#edit-client">Edit</a></button>
+                        <button class="edit-button"><a href="FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
             </table>
-            <button class="main-button"><a href="./newclient-form.html" target="_blank">Add new client</a></button>
+            <button class="main-button"><a href="FORMS/newclient-form.html" target="_blank">Add new client</a></button>
         </div>
     </main>
+    <div class="wave-footer">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#273036" stroke="transparent" fill-opacity="1" d="M0,256L60,240C120,224,240,192,360,197.3C480,203,600,245,720,250.7C840,256,960,224,1080,218.7C1200,213,1320,235,1380,245.3L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+        </svg>
+    </div>
     <footer>
         <div class="footer-info">
             <div class="logo-footer"><img src="../img/logo-white.svg" alt=""></div>
