--- a/HTML/FORMS/client-details.html
+++ b/HTML/FORMS/client-details.html
@@ -10,7 +10,9 @@
 <body>
     <div class="main-container">
         <div class="logo">
-            <a href="../index.html"><img src="../../img/logo.svg" alt="logo"></a>
+            <a href="../ndex.html">
+                <h3 class="x-logo">X</h3><h3>Barbershop</h3>
+            </a>
          </div>
         <h1 class="title">Details</h1>
         <form action="">
