--- a/HTML/FORMS/newclient-form.html
+++ b/HTML/FORMS/newclient-form.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="logo">
-        <a href="../index.html"><img src="../../img/logo.svg" alt="logo"></a>
+        <a href="../index.html">
+            <h3 class="x-logo">X</h3><h3>Barbershop</h3>
+        </a>
      </div>
     <div class="main-container">
         <h1 class="title">Fill out the form below</h1>
