--- a/HTML/clients.html
+++ b/HTML/clients.html
@@ -12,9 +12,16 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <a href="./index.html"><img src="../img/logo.svg" alt="logo"></a>
+                <a href="index.html">
+                    <h3 class="x-logo">X</h3><h3>Barbershop</h3>
+                </a>
              </div>
-             <nav>
+             <button class="hamburger">
+                <span class="hamburger__box">
+                  <span class="hamburger__inner"></span>
+                </span>
+              </button>
+             <nav class="navigation">
                  <ul class="nav-links"> 
                      <li><a class="nav-link" href="./index.html">Home</a></li>
                      <li><a class="nav-link" href="./appointments.html">Appointments</a></li>
@@ -87,5 +94,6 @@
         </div>
         <div class="credits">Jakub Adamczyk s18730</div>
     </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
