--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,9 +10,16 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <a href="./index.html"><img src="../img/logo.svg" alt="logo"></a>
+                <a href="index.html">
+                    <h3 class="x-logo">X</h3><h3>Barbershop</h3>
+                </a>
              </div>
-             <nav>
+             <button class="hamburger">
+                <span class="hamburger__box">
+                  <span class="hamburger__inner"></span>
+                </span>
+              </button>
+             <nav class="navigation">
                  <ul class="nav-links"> 
                      <li><a class="nav-link active" href="./index.html">Home</a></li>
                      <li><a class="nav-link" href="./appointments.html">Appointments</a></li>
@@ -24,19 +31,21 @@
     </header>
     <main>
         <section class="hero">
-            <div class="hero-wrapper">
-                <div class="img-container"><img src="../img/barber_hero.jpeg" alt=""></div>
-                <div class="text">
-                    <h1>We care</h1>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni natus minus sequi libero sint aut praesentium et qui accusamus modi saepe aliquam iure, officiis adipisci odit itaque dolor? Necessitatibus, atque.
-                    </p> 
+            <div class="overlay">
+                <div class="hero-wrapper">
+                    <div class="img-container"><img src="../img/barber_hero.jpeg" alt=""></div>
+                    <div class="text">
+                        <h1>We care</h1>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni natus minus sequi libero sint aut praesentium et qui accusamus modi saepe aliquam iure, officiis adipisci odit itaque dolor? Necessitatibus, atque.
+                        </p> 
+                    </div>
                 </div>
-            </div>
-            <div class="wave-hero">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                    <path fill="#91c2d3" fill-opacity="1" d="M0,288L80,288C160,288,320,288,480,261.3C640,235,800,181,960,149.3C1120,117,1280,107,1360,101.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
-                </svg>
+                <div class="wave-hero">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                        <path fill="#91c2d3" fill-opacity="1" d="M0,288L80,288C160,288,320,288,480,261.3C640,235,800,181,960,149.3C1120,117,1280,107,1360,101.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+                    </svg>
+                </div>
             </div>
         </section>
         <section class="person-wrapper">
@@ -57,7 +66,7 @@
     <footer>
         <div class="footer-info">
             <div class="logo-footer">
-                <img src="../img/logo-white.svg" alt="">
+                <h3 class="x-logo">X</h3><h3>Barbershop</h3>
             </div>
             <div class="contact">
                 <p>Aroniowa,<br>
@@ -69,5 +78,6 @@
         </div>
         <div class="credits">Jakub Adamczyk s18730</div>
     </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
