--- a/HTML/appointments.html
+++ b/HTML/appointments.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appointments</title>
+    <link rel="icon" href="../../img/x-thumbnail.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -34,51 +35,42 @@
         <div class="main-container">
             <h1 class="title">Appointments</h1>
             <table>
-                <tr>
+                <thead>
                     <th>Name</th>
-                    <th>Last name</th>
-                    <th>E-mail</th>
                     <th>Phone number</th>
                     <th>Service</th>
-                    <th>Price</th>
                     <th>Data</th>
                     <th>Actions</th>
-                </tr>
+                </thead>
                 <tr>
-                    <td>Jan</td>
-                    <td>Król</td>
-                    <td>jkrol@gmail.com</td>
+                    <td>Jan Król</td>
                     <td>+48 502 939 325</td>
                     <td>Haircut</td>
-                    <td>90 PLN</td>
                     <td>29/10/2020 14:00</td>
                     <td>
+                        <button class="details-button"><a href="./FORMS/client-details.html">Details</a></button>
                         <button class="edit-button"><a href="./FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
                 <tr>
-                    <td>Jan</td>
-                    <td>Król</td>
-                    <td>jkrol@gmail.com</td>
+                    <td>Jan Król</td>
                     <td>+48 502 939 325</td>
                     <td>Haircut</td>
-                    <td>90 PLN</td>
                     <td>29/10/2020 14:00</td>
                     <td>
+                        <button class="details-button"><a href="./FORMS/client-details.html">Details</a></button>
                         <button class="edit-button"><a href="./FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
                 </tr>
                 <tr>
-                    <td>Jan</td>
-                    <td>Król</td>
-                    <td>jkrol@gmail.com</td>
+                    <td>Jan Król</td>
                     <td>+48 502 939 325</td>
                     <td>Haircut</td>
-                    <td>90 PLN</td>
                     <td>29/10/2020 14:00</td>
                     <td>
+                        <button class="details-button"><a href="./FORMS/client-details.html">Details</a></button>
                         <button class="edit-button"><a href="./FORMS/edit-client.html">Edit</a></button>
                         <button class="delete-button"><a href="#">Delete</a></button>
                     </td>
@@ -88,7 +80,7 @@
         <div class="booking">
             <h2>Book new appointment</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quia officiis vitae voluptatum maiores atque dolorum eveniet, quod laboriosam animi, molestiae ullam eaque maxime tempora nobis! Recusandae pariatur eum molestiae.</p>
-            <button class="main-button"><a href="FORMS/booking-form.html" target="_blank">Book now!</a></button>
+            <button class="main-button"><a href="FORMS/booking-form.html">Book now!</a></button>
         </div>
     </main>
     <div class="wave-footer">
