--- a/HTML/clients.html
+++ b/HTML/clients.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clients</title>
+    <link rel="icon" href="../../img/x-thumbnail.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -35,13 +36,13 @@
         <div class="main-container">
             <h1 class="title">Clients</h1>
             <table>
-                <tr>
+                <thead>
                     <th>Name</th>
                     <th>Last name</th>
                     <th>E-mail</th>
                     <th>Phone number</th>
                     <th>Actions</th>
-                </tr>
+                </thead>
                 <tr>
                     <td>Jan</td>
                     <td>Król</td>
@@ -73,7 +74,7 @@
                     </td>
                 </tr>
             </table>
-            <button class="main-button"><a href="FORMS/newclient-form.html" target="_blank">Add new client</a></button>
+            <button class="main-button"><a href="FORMS/newclient-form.html">Add new client</a></button>
         </div>
     </main>
     <div class="wave-footer">
