--- a/HTML/services.html
+++ b/HTML/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <link rel="icon" href="../../img/x-thumbnail.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -36,12 +37,12 @@
                 Our highest quality services!
             </h1>
             <table>
-                <tr>
+                <thead>
                     <th>Service</th>
                     <th>Time</th>
                     <th>Price</th>
                     <th>Actions</th>
-                </tr>
+                </thead>
                 <tr>
                     <td>Haircut</td>
                     <td>1h</td>
@@ -83,7 +84,8 @@
                     </td>
                 </tr>
             </table>
-            <button class="main-button"><a href="FORMS/booking-form.html" target="_blank">Book now!</a></button>
+            <button class="main-button"><a href="FORMS/booking-form.html">Book now!</a></button>
+            <button class="details-button"><a href="FORMS/add-service.html">Add service</a></button>
         </div>
     </main>
     <div class="wave-footer">
