--- a/HTML/FORMS/booking-form.html
+++ b/HTML/FORMS/booking-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
+    <link rel="icon" href="../../img/x-thumbnail.png">
     <link rel="stylesheet" href="../../styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -17,44 +18,64 @@
         <h1 class="title">Fill out the form below</h1>
     <form action="">
         <div class="input">
-            <label for="firstName">Name:</label>
-            <input type="text" name="firstName" id="firstName" required>
-        </div>
-        <div class="input">
-            <label for="lastName">Last name:</label>
-            <input type="text" name="lastName" id="lastName" required>
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" list="namelist" required>
+            <datalist id="namelist">
+                <option value="Jan Król">Jan Król</option>
+                <option value="Jan Król">Jan Król</option>    
+                <option value="Jan Król">Jan Król</option>
+                <option value="Jan Król">Jan Król</option>
+            </datalist>
+            <span id="errorName" class="errors-text"></span>
         </div>
         <div class="input">
             <label for="email">E-mail:</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" list="emaillist" required>
+            <datalist id="emaillist">
+                <option value="jkrol@gmail.com">jkrol@gmail.com</option>
+                <option value="jkrol@gmail.com">jkrol@gmail.com</option>    
+                <option value="jkrol@gmail.com">jkrol@gmail.com</option>
+                <option value="jkrol@gmail.com">jkrol@gmail.com</option>
+            </datalist>
+            <span id="errorEmail" class="errors-text"></span>
         </div>
         <div class="input">
             <label for="phone">Phone number:</label>
-            <input type="tel" name="phone" id="phone" pattern="[0-9]{9}" required>
+            <input type="tel" name="phone" id="phone" pattern="[0-9]{9}" list="tellist" required>
+            <datalist id="tellist">
+                <option value="503 492 230">503 492 230</option>
+                <option value="503 492 230">503 492 230</option>    
+                <option value="503 492 230">503 492 230</option>
+                <option value="503 492 230">503 492 230</option>
+            </datalist>
+            <span id="errorPhone" class="errors-text"></span>
         </div>
         <div class="input">
-            <label for="date">Service</label>
-            <select name="date" id="date">
-            <option value="Haircut">Haircut</option>
-            <option value="Trim">Trim</option>
-            <option value="Beard trim">Beard trim</option>
+            <label for="service">Service</label>
+            <select name="service" id="service">
+                <option value="Haircut">Haircut</option>
+                <option value="Trim">Trim</option>
+                <option value="Beard trim">Beard trim</option>
             <option value="Combo">Combo</option>
             </select>
+            <span id="errorService" class="errors-text"></span>
         </div>
         <div class="input">
             <label for="date">Date:</label>
             <select name="date" id="date">
-            <option value="24/10/2020 14:00">24/10/2020 14:00</option>
-            <option value="24/10/2020 15:00">24/10/2020 15:00</option>
-            <option value="24/10/2020 16:00">24/10/2020 16:00</option>
-            <option value="24/10/2020 17:00">24/10/2020 17:00</option>
-            <option value="24/10/2020 18:00">24/10/2020 18:00</option>
-            <option value="24/10/2020 19:00">24/10/2020 19:00</option>
-            <option value="24/10/2020 20:00">24/10/2020 20:00</option>
-            <option value="25/10/2020 14:00">25/10/2020 14:00</option>
+                <option value="24/10/2020 14:00">24/10/2020 14:00</option>
+                <option value="24/10/2020 15:00">24/10/2020 15:00</option>
+                <option value="24/10/2020 16:00">24/10/2020 16:00</option>
+                <option value="24/10/2020 17:00">24/10/2020 17:00</option>
+                <option value="24/10/2020 18:00">24/10/2020 18:00</option>
+                <option value="24/10/2020 19:00">24/10/2020 19:00</option>
+                <option value="24/10/2020 20:00">24/10/2020 20:00</option>
+                <option value="25/10/2020 14:00">25/10/2020 14:00</option>
             </select>
+            <span id="errorDate" class="errors-text"></span>
         </div>
-        <div class="input">
+        <div class="buttons">
+            <input type="button" class="secondary-button" value="Back" onclick="history.go(-1)" formnovalidate>
             <input type="submit" value="Book" class="main-button" />
         </div>
     </form>
