--- a/HTML/FORMS/edit-client.html
+++ b/HTML/FORMS/edit-client.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit client</title>
+    <link rel="icon" href="../../img/x-thumbnail.png">
     <link rel="stylesheet" href="../../styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -17,22 +18,24 @@
         <h1 class="title">Edit client</h1>
         <form action="">
             <div class="input">
-                <label for="firstName">Name:</label>
-                <input type="text" name="firstName" id="firstName" value="Jan" required>
-            </div>
-            <div class="input">
-                <label for="lastName">Last name:</label>
-                <input type="text" name="lastName" id="lastName" value="Król" required>
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name" value="Jan" required>
+                <span id="errorName" class="errors-text"></span>
             </div>
             <div class="input">
                 <label for="email">E-mail:</label>
                 <input type="email" name="email" id="email" value="jkrol@gmail.com" required>
+                <span id="errorEmail" class="errors-text"></span>
             </div>
             <div class="input">
                 <label for="phone">Phone number:</label>
                 <input type="tel" name="phone" id="phone" pattern="[0-9]{9}" value="+48 502 939 325" required>
+                <span id="errorPhone" class="errors-text"></span>
             </div>
-            <input class="main-button" type="submit" value="Submit" />
+            <div class="buttons">
+                <input type="button" class="secondary-button" value="Back" onclick="history.go(-1)" formnovalidate>
+                <input class="main-button" type="submit" value="Submit" />
+            </div>
         </form>
     </div>
 </body>
