--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XBarbershop</title>
+    <link rel="icon" href="../../img/x-thumbnail.png">
     <link rel="stylesheet" href="../styles/style.css">
+    <script type="application/javascript" src="../JS/validationCommon.js"></script>
 </head>
 <body>
     <header>
@@ -41,11 +43,11 @@
                         </p> 
                     </div>
                 </div>
-                <div class="wave-hero">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                        <path fill="#91c2d3" fill-opacity="1" d="M0,288L80,288C160,288,320,288,480,261.3C640,235,800,181,960,149.3C1120,117,1280,107,1360,101.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
-                    </svg>
-                </div>
+            </div>
+            <div class="wave-hero">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#91c2d3" fill-opacity="1" d="M0,288L80,288C160,288,320,288,480,261.3C640,235,800,181,960,149.3C1120,117,1280,107,1360,101.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+                </svg>
             </div>
         </section>
         <section class="person-wrapper">
